[package]
name = "rwc"
version = "0.1.0"
authors = ["Doctor5555 <5555thedoctor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.0"
logos = { version = "^0", path = "../vendor/logos/logos" }
# logos_derive = { version = "^0", path = "../vendor/logos/logos-derive" }